--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "Full Access to Watched Wallets",
       "hw_wallets_enabled": "Enable Hardware Wallet Support",
       "command_k_internal_shortcuts_enabled": "Enable ⌘K Internal Shortcuts",
-      "custom_rpc": "Custom RPC"
+      "custom_rpc": "Custom RPC",
+      "degen_mode": "Degen Mode"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Got it"
+      },
+      "degen_mode": {
+        "title": "Degen Mode",
+        "description": "Skip the review sheet to swap faster"
       }
     },
     "actions": {
