chore: add hide nft to magic menu

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -489,6 +489,8 @@
         "remove_contact": "Remove Contact",
         "hide_token": "Hide %{name}",
         "unhide_token": "Unhide %{name}",
+        "hide": "Hide",
+        "unhide": "Unhide",
         "copy_wallet_address": "Copy Address",
         "view_wallet_on_etherscan": "View on Etherscan",
         "send_contact": "Send to Contact",
@@ -499,7 +501,8 @@
       "search_tags": {
         "swap": "buy, sell, trade, order, exchange, dex, routes",
         "bridge": "transfer, chain, routes",
-        "hide_token": "hide, unhide",
+        "hide_token": "hidden",
+        "hide_nft": "hidden",
         "get": "swap, bridge",
         "my_wallets": "my, switch",
         "my_contacts": "my",
