--- a/static/json/languages/ja_JP.json
+++ b/static/json/languages/ja_JP.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "ウォレットの監視機能を完全に有効にする",
       "hw_wallets_enabled": "ハードウェアウォレットサポートを有効にする",
       "command_k_internal_shortcuts_enabled": "⌘K の内部ショートカットを有効にする",
-      "custom_rpc": "カスタムRPC"
+      "custom_rpc": "カスタムRPC",
+      "degen_mode": "Degenモード"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "了解"
+      },
+      "degen_mode": {
+        "title": "Degenモード",
+        "description": "検討ステップをスキップして、より迅速に交換"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "転送トークンの手数料",
       "no_route": "ルートが見つかりません",
       "no_quote": "利用可能な見積もりなし",
-      "enter_an_amount": "金額を入力してください"
+      "enter_an_amount": "金額を入力してください",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "デバイスで確認してください"
     },
     "review": {
       "title": "レビュー & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "ウォレットグループをインポートする",
     "n_words_might_be_wrong": "%{n} 単語がスペルミスや誤りがある可能性があります。",
     "1_word_might_be_wrong": "1 単語がスペルミスや誤りがある可能性があります。",
-    "couldnt_paste": "シークレットリカバリーフレーズを貼り付けることができませんでした。"
+    "couldnt_paste": "シークレットリカバリーフレーズを貼り付けることができませんでした。",
+    "duplicate_seed": "このシードはすでにインポートされています"
   },
   "import_wallet_via_private_key": {
     "title": "ウォレットのインポート",
