--- a/static/json/languages/es_419.json
+++ b/static/json/languages/es_419.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "Acceso completo a billeteras vigiladas",
       "hw_wallets_enabled": "Habilitar soporte para billeteras de hardware",
       "command_k_internal_shortcuts_enabled": "Habilitar accesos directos internos ⌘K",
-      "custom_rpc": "RPC Personalizado"
+      "custom_rpc": "RPC Personalizado",
+      "degen_mode": "Modo Degen"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Entendido"
+      },
+      "degen_mode": {
+        "title": "Modo Degen",
+        "description": "Omite el paso de revisión para intercambiar más rápido"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "Comisión en el Token de Transferencia",
       "no_route": "No se encontró ruta",
       "no_quote": "No hay cotización disponible",
-      "enter_an_amount": "Ingresa una cantidad"
+      "enter_an_amount": "Ingresa una cantidad",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "Confirmar en tu dispositivo"
     },
     "review": {
       "title": "Revisar y %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "Importar grupo de billetera",
     "n_words_might_be_wrong": "%{n} palabras podrían estar mal escritas o incorrectas.",
     "1_word_might_be_wrong": "1 palabra podría estar mal escrita o incorrecta.",
-    "couldnt_paste": "No pudimos pegar tu Frase de Recuperación Secreta"
+    "couldnt_paste": "No pudimos pegar tu Frase de Recuperación Secreta",
+    "duplicate_seed": "Esta seed ya está importada"
   },
   "import_wallet_via_private_key": {
     "title": "Importar tu billetera",
