--- a/static/json/languages/fr_FR.json
+++ b/static/json/languages/fr_FR.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "Accès complet aux portefeuilles surveillés",
       "hw_wallets_enabled": "Activer la prise en charge des portefeuilles matériels",
       "command_k_internal_shortcuts_enabled": "Activer les raccourcis internes ⌘K",
-      "custom_rpc": "RPC personnalisé"
+      "custom_rpc": "RPC personnalisé",
+      "degen_mode": "Mode Degen"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Compris"
+      },
+      "degen_mode": {
+        "title": "Mode Degen",
+        "description": "Sautez l'étape de révision pour échanger plus rapidement"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "Frais sur Transfert de Jeton",
       "no_route": "Aucun itinéraire trouvé",
       "no_quote": "Aucune citation disponible",
-      "enter_an_amount": "Entrez un montant"
+      "enter_an_amount": "Entrez un montant",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "Confirmer sur votre appareil"
     },
     "review": {
       "title": "Réviser & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "Importer un groupe de portefeuilles",
     "n_words_might_be_wrong": "%{n} mots peuvent être mal orthographiés ou incorrects.",
     "1_word_might_be_wrong": "1 mot peut être mal orthographié ou incorrect.",
-    "couldnt_paste": "Nous n'avons pas pu coller votre Phrase de récupération secrète"
+    "couldnt_paste": "Nous n'avons pas pu coller votre Phrase de récupération secrète",
+    "duplicate_seed": "Cette graine est déjà importée"
   },
   "import_wallet_via_private_key": {
     "title": "Importer votre portefeuille",
