--- a/static/json/languages/id_ID.json
+++ b/static/json/languages/id_ID.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "Akses Penuh ke Dompet Tertonton",
       "hw_wallets_enabled": "Aktifkan Dukungan Dompet Perangkat Keras",
       "command_k_internal_shortcuts_enabled": "Aktifkan Pintasan Internal ⌘K",
-      "custom_rpc": "RPC Kustom"
+      "custom_rpc": "RPC Kustom",
+      "degen_mode": "Degen Mode"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Mengerti"
+      },
+      "degen_mode": {
+        "title": "Degen Mode",
+        "description": "Lewati langkah ulasan untuk bertukar lebih cepat"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "Biaya Pada Transfer Token",
       "no_route": "Tidak ada rute yang ditemukan",
       "no_quote": "Tidak ada kutipan yang tersedia",
-      "enter_an_amount": "Masukkan jumlah"
+      "enter_an_amount": "Masukkan jumlah",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning} melalui",
+      "waiting_signature": "Konfirmasi di perangkat Anda"
     },
     "review": {
       "title": "Ulas & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "Impor grup dompet",
     "n_words_might_be_wrong": "%{n} kata mungkin salah penulisan atau tidak benar.",
     "1_word_might_be_wrong": "1 kata mungkin salah penulisan atau tidak benar.",
-    "couldnt_paste": "Kami tidak dapat menempelkan Frasa Pemulihan Rahasia Anda"
+    "couldnt_paste": "Kami tidak dapat menempelkan Frasa Pemulihan Rahasia Anda",
+    "duplicate_seed": "Seed ini sudah diimpor"
   },
   "import_wallet_via_private_key": {
     "title": "Impor Dompet Anda",
