--- a/static/json/languages/pt_BR.json
+++ b/static/json/languages/pt_BR.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "Acesso completo às Carteiras Observadas",
       "hw_wallets_enabled": "Habilitar Suporte para Carteiras de Hardware",
       "command_k_internal_shortcuts_enabled": "Habilitar Atalhos Internos ⌘K",
-      "custom_rpc": "RPC personalizado"
+      "custom_rpc": "RPC personalizado",
+      "degen_mode": "Modo Degen"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Entendi"
+      },
+      "degen_mode": {
+        "title": "Modo Degen",
+        "description": "Pule a etapa de revisão para trocar mais rápido"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "Taxa em Token de Transferência",
       "no_route": "Nenhuma rota encontrada",
       "no_quote": "Nenhuma cotação disponível",
-      "enter_an_amount": "Insira um valor"
+      "enter_an_amount": "Insira um valor",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "Confirmar no seu dispositivo"
     },
     "review": {
       "title": "Revisar & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "Importar grupo de carteira",
     "n_words_might_be_wrong": "%{n} palavras podem estar escritas erradas ou incorretas.",
     "1_word_might_be_wrong": "1 palavra pode estar escrita errada ou incorreta.",
-    "couldnt_paste": "Não foi possível colar sua Frase de Recuperação Secreta"
+    "couldnt_paste": "Não foi possível colar sua Frase de Recuperação Secreta",
+    "duplicate_seed": "Esta semente já foi importada"
   },
   "import_wallet_via_private_key": {
     "title": "Importar sua Carteira",
