--- a/static/json/languages/th_TH.json
+++ b/static/json/languages/th_TH.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "สิทธิ์เข้าถึงเต็มรูปแบบของ Wallet ที่ถูกติดตาม",
       "hw_wallets_enabled": "เปิดการสนับสนุน Hardware Wallet",
       "command_k_internal_shortcuts_enabled": "เปิดใช้งาน ⌘K Shortcut ภายใน",
-      "custom_rpc": "Custom RPC"
+      "custom_rpc": "Custom RPC",
+      "degen_mode": "โหมด Degen"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "เข้าใจแล้ว"
+      },
+      "degen_mode": {
+        "title": "โหมด Degen",
+        "description": "ข้ามขั้นตอนการตรวจสอบเพื่อแลกเปลี่ยนได้เร็วขึ้น"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "ค่าธรรมเนียมสำหรับการโอนโทเค็น",
       "no_route": "ไม่พบเส้นทาง",
       "no_quote": "ไม่มีใบเสนอราคาที่มีอยู่",
-      "enter_an_amount": "ป้อนจำนวน"
+      "enter_an_amount": "ป้อนจำนวน",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "ยืนยันบนอุปกรณ์ของคุณ"
     },
     "review": {
       "title": "รีวิว & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "นำเข้ากลุ่มกระเป๋าสตางค์",
     "n_words_might_be_wrong": "%{n} คำอาจจะสะกดไม่ถูกต้องหรือไม่ถูกต้อง",
     "1_word_might_be_wrong": "1 คำอาจจะสะกดไม่ถูกต้องหรือไม่ถูกต้อง",
-    "couldnt_paste": "เราไม่สามารถวางวลีกู้คืนลับของคุณ"
+    "couldnt_paste": "เราไม่สามารถวางวลีกู้คืนลับของคุณ",
+    "duplicate_seed": "เมล็ดนี้นำเข้าแล้ว"
   },
   "import_wallet_via_private_key": {
     "title": "นำกระเป๋าเงินของคุณเข้า",
