--- a/static/json/languages/tr_TR.json
+++ b/static/json/languages/tr_TR.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "İzlenen Cüzdanlara Tam Erişim",
       "hw_wallets_enabled": "Donanım Cüzdanı Desteğini Etkinleştir",
       "command_k_internal_shortcuts_enabled": "⌘K İç Hızlı Kısayollarını Etkinleştir",
-      "custom_rpc": "Özel RPC"
+      "custom_rpc": "Özel RPC",
+      "degen_mode": "Degen Modu"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "Anladım"
+      },
+      "degen_mode": {
+        "title": "Degen Modu",
+        "description": "Daha hızlı değiştirmek için inceleme adımını atlayın"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "Transfer Token Üzerine Ücret",
       "no_route": "Rota bulunamadı",
       "no_quote": "Teklif mevcut değil",
-      "enter_an_amount": "Bir miktar girin"
+      "enter_an_amount": "Bir miktar girin",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "Cihazınızda Onaylayın"
     },
     "review": {
       "title": "Gözden Geçir & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "12 kelime kullanıyorum",
     "n_words_might_be_wrong": "%{n} kelimenin yanlış yazılmış veya hatalı olabileceği belirlendi.",
     "1_word_might_be_wrong": "<span class=\"notranslate\">0</span> kelime yanlış yazılmış veya hatalı olabilir.",
-    "couldnt_paste": "1 kelime yanlış yazılmış veya hatalı olabilir."
+    "couldnt_paste": "1 kelime yanlış yazılmış veya hatalı olabilir.",
+    "duplicate_seed": "Bu tohum zaten ithal edildi"
   },
   "import_wallet_via_private_key": {
     "title": "Gizli Kurtarma Cümlesini yapıştıramadık",
