--- a/static/json/languages/zh_CN.json
+++ b/static/json/languages/zh_CN.json
@@ -294,7 +294,8 @@
       "full_watching_wallets": "完全访问被监视的钱包",
       "hw_wallets_enabled": "启用硬件钱包支持",
       "command_k_internal_shortcuts_enabled": "启用 ⌘K 内部快捷键",
-      "custom_rpc": "自定义RPC"
+      "custom_rpc": "自定义RPC",
+      "degen_mode": "Degen模式"
     }
   },
   "transactions": {
@@ -776,6 +777,10 @@
           }
         },
         "got_it": "知道了"
+      },
+      "degen_mode": {
+        "title": "Degen模式",
+        "description": "跳过审核步骤以更快地交换"
       }
     },
     "actions": {
@@ -785,7 +790,10 @@
       "fee_on_transfer_token": "转账代币的费用",
       "no_route": "找不到路由",
       "no_quote": "无可用报价",
-      "enter_an_amount": "输入金额"
+      "enter_an_amount": "输入金额",
+      "swap": "%{Action}",
+      "swapping": "%{Actioning}",
+      "waiting_signature": "在您的设备上确认"
     },
     "review": {
       "title": "审查 & %{Action}",
@@ -942,7 +950,8 @@
     "import_wallet_group": "导入钱包组",
     "n_words_might_be_wrong": "可能有%{n} 个单词拼写错误或不正确",
     "1_word_might_be_wrong": "可能有1个单词拼写错误或不正确",
-    "couldnt_paste": "无法粘贴您的秘密恢复短语"
+    "couldnt_paste": "无法粘贴您的秘密恢复短语",
+    "duplicate_seed": "此种子已导入"
   },
   "import_wallet_via_private_key": {
     "title": "导入您的钱包",
