--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1629,7 +1629,8 @@
       "unverified": "Unverified",
       "verified": "Verified",
       "on_other_networks": "On other networks",
-      "bridge": "Bridge"
+      "bridge": "Bridge",
+      "popular": "Popular in Rainbow"
     },
     "verified_by_rainbow": "Verified by Rainbow"
   },
