--- a/static/json/languages/es_419.json
+++ b/static/json/languages/es_419.json
@@ -1456,7 +1456,7 @@
       "the_more_you_use": "Cuanto más uses Rainbow, más serás recompensado",
       "balance_required": "Saldo de billetera requerido",
       "ensure_you_have_a_balance_on": "Para continuar, asegúrate de tener saldo en ETH en una de las siguientes redes:",
-      "or_alternatively_balance_on": "O alternativamente, saldo en MATIC en Polygon o saldo en BNB en BSC",
+      "or_alternatively_balance_on": "O alternativamente, saldo en POL en Polygon o saldo en BNB en BSC",
       "fund_my_wallet": "Financiar Mi Billetera"
     },
     "error": {
