--- a/static/json/languages/id_ID.json
+++ b/static/json/languages/id_ID.json
@@ -1456,7 +1456,7 @@
       "the_more_you_use": "Semakin sering Anda menggunakan Rainbow, semakin banyak hadiah yang akan Anda dapatkan",
       "balance_required": "Saldo dompet diperlukan",
       "ensure_you_have_a_balance_on": "Untuk melanjutkan, pastikan Anda memiliki saldo ETH di salah satu jaringan berikut:",
-      "or_alternatively_balance_on": "Atau alternatifnya, saldo MATIC di Polygon atau saldo BNB di BSC",
+      "or_alternatively_balance_on": "Atau alternatifnya, saldo POL di Polygon atau saldo BNB di BSC",
       "fund_my_wallet": "Isi Saldo Dompet"
     },
     "error": {
